crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__highest_int_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "9223372036854775807\n"
---
(BeginTopLevelDecls HintExpr Num=>IntBase10@0 EndTopLevelDecls)

[=== canfmt below ===]
IntBase10("9223372036854775807")

[=== formatted below ===]

