crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__ident.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc
---
(BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
Expr(Ident("abc"))

[=== formatted below ===]
abc
