crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__if.snap
---
source: crates/compiler/parse/src/cypress.rs
description: if abc then def else ghi
---
(BeginTopLevelDecls
    HintExpr
    (BeginIf
        Ident=>LowerIdent@1
        InlineThen=>KwThen@2
        Ident=>LowerIdent@3
        InlineElse=>KwElse@4
        Ident=>LowerIdent@5
    EndIf)
EndTopLevelDecls)
