crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__if_def_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "iffy=5\n\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Num=>IntBase10@2
        EndAssign)
        HintExpr
        Num=>IntBase10@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign("iffy", IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

