crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__if_def_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "iffy = 5\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign Ident=>LowerIdent@0 InlineAssign=>OpAssign@1 Num=>Int@2 EndAssign)
        HintExpr
        Num=>Int@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("iffy"), IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

