crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__int_with_underscore_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "1__23\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("1__23")

[=== formatted below ===]

